syntax = "proto3";

package bank.ledgerpayments.v1;

option go_package = "github.com/imaginarybank/banking-contracts/gen/go/bank/ledgerpayments/v1;ledgerpaymentsv1";


import "google/protobuf/timestamp.proto";


service PaymentsService {
  rpc PostPayment(PostPaymentRequest) returns (PostPaymentResponse);
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
}

service LedgerService {
  rpc CreditAccount(CreditAccountRequest) returns (CreditAccountResponse);
  rpc ListAccountJournalEntries(ListAccountJournalEntriesRequest) returns (ListAccountJournalEntriesResponse);
  // NUEVO: Estado de cuenta / Movimientos
  rpc ListAccountStatement(ListAccountStatementRequest) returns (ListAccountStatementResponse);
}

message PostPaymentRequest {
  string idempotency_key = 1;
  string source_account_id = 2;      // UUID
  string destination_account_id = 3; // UUID (destination_kind=internal)
  string currency = 4;               // "USD"
  string amount = 5;                 // decimal como string para evitar float (20,6)
  string initiated_by = 6;           // subject/actor
}

message PostPaymentResponse {
  string payment_id = 1;             // UUID
  string status = 2;                 // posted|processing|failed
}

message GetPaymentRequest {
  string payment_id = 1; // UUID
}

message PaymentStep {
  string step = 1; // VALIDATE|RESERVE|JOURNAL|OUTBOX|COMPENSATE
  string state = 2; // ok|failed|skipped
  string details_json = 3;
  google.protobuf.Timestamp attempted_at = 4;
}

message GetPaymentResponse {
  string payment_id = 1;
  string status = 2;
  string source_account_id = 3;
  string destination_account_id = 4;
  string currency = 5;
  string amount = 6;
  repeated PaymentStep steps = 7;
  google.protobuf.Timestamp created_at = 8;
}

message CreditAccountRequest {
  string idempotency_key = 1;
  string account_id = 2;  // UUID
  string currency = 3;
  string amount = 4;      // decimal string
  string initiated_by = 5;
  string external_ref = 6; // opcional
  string reason = 7;       // ej: "registration_bonus"
  string customer_id = 8;  // contrapartida (no PII), ej: customerId
}

message CreditAccountResponse {
  string journal_id = 1;   // UUID
  string status = 2;       // posted
}

message ListAccountJournalEntriesRequest {
  string account_id = 1; // UUID
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
  int32 page = 4;
  int32 size = 5;
}

message JournalLine {
  string gl_account_code = 1;
  string counterparty_ref = 2;
  string debit = 3;   // decimal string
  string credit = 4;  // decimal string
}

message JournalEntryView {
  string journal_id = 1; // UUID
  string currency = 2;
  string status = 3;
  google.protobuf.Timestamp booked_at = 4;
  string external_ref = 5;
  repeated JournalLine lines = 6;
}

message ListAccountJournalEntriesResponse {
  repeated JournalEntryView entries = 1;
  int32 page = 2;
  int32 size = 3;
}


message ListAccountStatementRequest {
  string account_id = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
  int32 page = 4;  // 1-based
  int32 size = 5;
  bool include_counterparty = 6; // si true, ledger enriquece con micro/account
}

message CounterpartyView {
  string account_id = 1;
  string account_number = 2;
  string display_name = 3;   // nombre del titular (demo)
  string account_type = 4;   // savings|checking|...
}

message StatementItem {
  string journal_id = 1;
  google.protobuf.Timestamp booked_at = 2;
  string currency = 3;

  string direction = 4; // debit|credit
  string amount = 5;    // decimal string

  string kind = 6;      // transfer|bonus|other
  string memo = 7;      // external_ref

  string counterparty_account_id = 8; // vac√≠o si "system"
  CounterpartyView counterparty = 9;  // presente si include_counterparty=true
}

message ListAccountStatementResponse {
  repeated StatementItem items = 1;
  int32 page = 2;
  int32 size = 3;
}