syntax = "proto3";

package bank.ops.v1;

//option go_package = "github.com/your-org/your-repo/genproto/bank/ops/v1;opsv1";
//option java_multiple_files = true;
//option java_package = "com.bank.ops.v1";
option go_package = "github.com/imaginarybank/banking-contracts/gen/go/bank/ops/v1;opsv1";
option java_multiple_files = true;
option java_package = "bank.ops.v1";
option java_outer_classname = "OpsProto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// =========================================================
// Services
// =========================================================

service AuditService {
  // GET /audit/events?trace_id=...&limit=...
  // Header: X-Subject (opcional)
  rpc GetAuditEventsByTrace(GetAuditEventsByTraceRequest) returns (GetAuditEventsByTraceResponse);
}

service NotificationsService {
  // GET /notifications/prefs?customer_id=...
  // Header: X-Subject (opcional)
  rpc GetNotificationPrefs(GetNotificationPrefsRequest) returns (GetNotificationPrefsResponse);
}

// =========================================================
// Enums
// =========================================================

enum NotificationChannel {
  NOTIFICATION_CHANNEL_UNSPECIFIED = 0;
  NOTIFICATION_CHANNEL_EMAIL = 1;
  NOTIFICATION_CHANNEL_SMS = 2;
  NOTIFICATION_CHANNEL_PUSH = 3;
}

// =========================================================
// Messages - Requests / Responses
// =========================================================

// -------------------------
// /audit/events
// -------------------------

message GetAuditEventsByTraceRequest {
  // OpenAPI: query trace_id (uuid)
  string trace_id = 1;

  // OpenAPI: query limit (min 1, max 1000, default 200)
  // Si no se envía, el server debe aplicar el default (200).
  google.protobuf.Int32Value limit = 2;

  // OpenAPI: header X-Subject (maxLength 200), optional.
  // Si no se envía, se usa "internal" (según OpenAPI).
  google.protobuf.StringValue x_subject = 3;
}

message GetAuditEventsByTraceResponse {
  repeated AuditEventItem events = 1; // required in OpenAPI => repeated por defecto "presente"
}

message AuditEventItem {
  // Acción auditada (ej. payments.create, login, logout).
  string action = 1;

  // Timestamp del evento (ISO-8601).
  google.protobuf.Timestamp occurred_at = 2;

  // Identificador del recurso asociado.
  string resource_id = 3;
}

// -------------------------
// /notifications/prefs
// -------------------------

message GetNotificationPrefsRequest {
  // OpenAPI: query customer_id (uuid)
  string customer_id = 1;

  // OpenAPI: header X-Subject (maxLength 200), optional.
  // Si no se envía, se usa "internal" (según OpenAPI).
  google.protobuf.StringValue x_subject = 2;
}

message GetNotificationPrefsResponse {
  repeated NotificationPrefItem prefs = 1;
}

message NotificationPrefItem {
  NotificationChannel channel = 1;
  bool opt_in = 2;
  google.protobuf.Timestamp updated_at = 3;
}

// -------------------------
// Error model (para mapear 4xx/5xx del OpenAPI)
// En gRPC típicamente se usa status code + details;
// aquí se incluye el schema tal cual para no omitir nada.
// -------------------------

message ErrorResponse {
  // Código estable de error (sin filtrar internals).
  string code = 1;

  // Mensaje breve de error.
  string message = 2;
}
